Fixes #18 by fixing the css that introduced the problem

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -234,7 +234,7 @@ h1, h2, h3, h4, h5, h6 {
     padding: 10px 10px 0 10px;
 }
 
-.tab-families, img {
+.tab-families img {
     margin-bottom: 20px;
     max-height: 105px;
     width: auto;
