--- a/css/style.css
+++ b/css/style.css
@@ -12196,7 +12196,7 @@ nav.navbar::before {
   padding: 10px 10px 0 10px;
 }
 
-.tab-families, img {
+.tab-families img {
   margin-bottom: 20px;
   max-height: 105px;
   width: auto;
