--- a/scss/style.scss
+++ b/scss/style.scss
@@ -118,12 +118,12 @@ h1, h2, h3, h4, h5, h6 {
   #zone-postscript-second {
     position: relative;
   } 
-  #zone-postscript-first {
+  .front #zone-postscript-first {
     background: #009ADE;
     position: relative;
     padding: 30px 0 50px 0;
   }
-  #zone-postscript-first::before {
+  .front #zone-postscript-first::before {
     content: "";
     height: 15px;
     background: url(/themes/custom/assistb5subtheme/images/slices.png) top center no-repeat;
@@ -185,7 +185,7 @@ h1, h2, h3, h4, h5, h6 {
     width: 100%;
     margin-top: 0px;
   }
-  #zone-postscript-fourth {
+  .front #zone-postscript-fourth {
     position: relative;
     background: #6ABF4B;
     color: #FFF;
@@ -209,12 +209,6 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 //Donation Tabs
-
-#zone-postscript-first {
-    background: #009ADE;
-    position: relative;
-    padding: 30px 0 50px 0;
-}
 
 .quicktabs-tabpage, .tab-content {
     border: 3px solid #FF671D;
