--- a/css/style.css
+++ b/css/style.css
@@ -12041,7 +12041,10 @@ nav.navbar::before {
 #block-assistb5subtheme-content,
 #block-assistb5subtheme-breadcrumbs,
 #block-assistb5subtheme-page-title,
-#block-assistb5subtheme-local-tasks {
+#block-assistb5subtheme-local-tasks,
+#block-views-block-trustees-block,
+#block-views-block-leadership-team-block,
+#block-views-block-our-staff-block {
   margin: auto;
   max-width: 960px;
 }
