--- a/scss/style.scss
+++ b/scss/style.scss
@@ -85,7 +85,10 @@ h1, h2, h3, h4, h5, h6 {
   #block-assistb5subtheme-content,
   #block-assistb5subtheme-breadcrumbs,
   #block-assistb5subtheme-page-title,
-  #block-assistb5subtheme-local-tasks {
+  #block-assistb5subtheme-local-tasks,
+  #block-views-block-trustees-block,
+  #block-views-block-leadership-team-block,
+  #block-views-block-our-staff-block {
     margin: auto;
     max-width: 960px;
   }
