For #26 styles block quotes

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1033,17 +1033,17 @@ html {
   }
   */
   /* Blockquote */
-  /*
+ 
   blockquote {
     background: rgba(169,227,247,0.24);
-    border-left: 10px solid #009ADE;
+    border-left: 10px solid $primary;
     margin: 0em 0px;
     padding: 1em 10px;
     quotes: "\201C""\201D";
     margin-bottom: 20px;
   }
   blockquote:before {
-    color: #009ADE;
+    color: $primary;
     font-size: 4em;
     line-height: 0.1em;
     margin-right: 0.25em;
@@ -1051,7 +1051,7 @@ html {
     content: open-quote;
   }
   blockquote:after {
-      color: #009ADE;
+      color: $primary;
     font-size: 1.4em;
   }
   blockquote p {
@@ -1062,7 +1062,7 @@ html {
   blockquote p:not(:last-child) {
     float: left;
   }
-  */
+
   /* Events */
   /*
   .view-events .views-field-title ,
