Fixes #26 by styling bullets
With the previous blockquote commit this fixes #26
Applied the css to the article hook instead of block-main, which
I hope is sufficient

--- a/css/style.css
+++ b/css/style.css
@@ -12305,7 +12305,8 @@ ul {
   margin-bottom: 20px;
 }
 
-.block-main li::before {
+/*.block-main li::before*/
+article li::before {
   content: "";
   line-height: 1.5em;
   width: 0.5em;
