--- a/css/style.css
+++ b/css/style.css
@@ -12044,7 +12044,9 @@ nav.navbar::before {
 #block-assistb5subtheme-local-tasks,
 #block-views-block-trustees-block,
 #block-views-block-leadership-team-block,
-#block-views-block-our-staff-block {
+#block-views-block-our-staff-block,
+#block-views-block-asylum-seekers-tell-their-stories-block-1-2,
+#block-views-block-faqs-legacy-block {
   margin: auto;
   max-width: 960px;
 }
