--- a/scss/style.scss
+++ b/scss/style.scss
@@ -88,7 +88,9 @@ h1, h2, h3, h4, h5, h6 {
   #block-assistb5subtheme-local-tasks,
   #block-views-block-trustees-block,
   #block-views-block-leadership-team-block,
-  #block-views-block-our-staff-block {
+  #block-views-block-our-staff-block,
+  #block-views-block-asylum-seekers-tell-their-stories-block-1-2,
+  #block-views-block-faqs-legacy-block {
     margin: auto;
     max-width: 960px;
   }
