Fixes #29 by alterning the node template and adding a bit of style
Date format on D7 was Fj, Y on D9 it had submitted by naomi etc
Used a template from web/core/themes/starterkit

--- a/css/style.css
+++ b/css/style.css
@@ -12973,6 +12973,10 @@ ul.quicktabs-tabs {
 }
 */
 /* News page */
+.node__submitted {
+  color: #009ADE;
+}
+
 /*
 .views-field-created,
 footer.submitted {
