--- a/scss/style.scss
+++ b/scss/style.scss
@@ -972,6 +972,9 @@ html {
   }
   */
   /* News page */
+  .node__submitted {
+    color: $primary;
+  }
   /*
   .views-field-created,
   footer.submitted {
