--- a/css/style.css
+++ b/css/style.css
@@ -12178,6 +12178,10 @@ nav.navbar::before {
   max-width: 960px;
 }
 
+.eu-cookie-compliance-buttons {
+  margin: 1em 0 1em 0;
+}
+
 .quicktabs-tabpage, .tab-content {
   border: 3px solid #FF671D;
   border-radius: 10px;
