--- a/css/style.css
+++ b/css/style.css
@@ -12047,7 +12047,8 @@ nav.navbar::before {
 #block-views-block-our-staff-block,
 #block-views-block-asylum-seekers-tell-their-stories-block-1-2,
 #block-views-block-faqs-legacy-block,
-#views-bootstrap-stories-block {
+#views-bootstrap-stories-block,
+#views-bootstrap-tab-views-bootstrap-tabs-block-1 {
   margin: auto;
   max-width: 960px;
 }
