--- a/scss/style.scss
+++ b/scss/style.scss
@@ -91,7 +91,8 @@ h1, h2, h3, h4, h5, h6 {
   #block-views-block-our-staff-block,
   #block-views-block-asylum-seekers-tell-their-stories-block-1-2,
   #block-views-block-faqs-legacy-block,
-  #views-bootstrap-stories-block {
+  #views-bootstrap-stories-block,
+  #views-bootstrap-tab-views-bootstrap-tabs-block-1 {
     margin: auto;
     max-width: 960px;
   }
