--- a/css/style.css
+++ b/css/style.css
@@ -12717,6 +12717,11 @@ button:hover, input[type=reset]:hover, input[type=submit]:hover, input[type=butt
   align-items: center;
 }
 
+#block-views-block-random-host-story-block {
+  max-width: 960px;
+  margin: auto;
+}
+
 .random-story {
   max-width: 60%;
   min-height: 200px;
@@ -12727,7 +12732,11 @@ button:hover, input[type=reset]:hover, input[type=submit]:hover, input[type=butt
 }
 
 #block-views-block-random-host-story-block .random-story {
-  margin-top: 80px;
+  max-width: 500px;
+  margin: auto;
+  position: absolute;
+  top: 20%;
+  left: 5%;
 }
 
 .random-story a {
