--- a/scss/style.scss
+++ b/scss/style.scss
@@ -718,7 +718,13 @@ html {
     justify-content: center;
     align-items: center;
   }
-  .random-story{
+
+  #block-views-block-random-host-story-block {
+    max-width: 960px;
+    margin: auto;
+  }
+
+  .random-story {
     max-width: 60%;
     min-height: 200px;
     background: rgba(0,0,0,0.5);
@@ -728,7 +734,11 @@ html {
   }
 
   #block-views-block-random-host-story-block .random-story {
-    margin-top: 80px;
+    max-width: 500px;
+    margin: auto;
+    position: absolute;
+    top: 20%;
+    left: 5%;
   }
 
   .random-story a {
