Fixes #40 Donate button no longer missing
This was there all the time but hard to see by default style
Re-enabled existing css from D7 and tweaked it a bit
Also set the button colours as variables

--- a/css/style.css
+++ b/css/style.css
@@ -12924,31 +12924,35 @@ ul.quicktabs-tabs {
 
 
 }
-.donate-block-action {
+*/
+#block-donateblockaction {
   text-align: center;
 }
+
+/*
 .donate-tab-content img {
   margin-bottom: 20px;
   max-height: 105px;
       width: auto;}
-.donate-block-action .content a {
+*/
+#block-donateblockaction a {
   color: #FFF;
   background-color: #FF671D;
   padding: 20px;
   font-size: 2em;
-  font-family: 'Cabin', sans-serif;
+  font-family: "Cabin", sans-serif;
   font-weight: 400;
   line-height: 1.5;
   text-decoration: none;
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
   display: inline-block;
-
 }
-.donate-block-action .content a:hover {
+
+#block-donateblockaction a:hover {
   background: #6ABF4B;
 }
-*/
+
 /* Progress bar */
 /*
 .webform-progressbar-page .webform-progressbar-page-label {
