--- a/css/ck5style.css
+++ b/css/ck5style.css
@@ -224,30 +224,12 @@
 
 
   }
-  .donate-block-action {
-    text-align: center;
-  }
+  */
+  /*
   .donate-tab-content img {
     margin-bottom: 20px;
     max-height: 105px;
         width: auto;}
-  .donate-block-action .content a {
-    color: #FFF;
-    background-color: #FF671D;
-    padding: 20px;
-    font-size: 2em;
-    font-family: 'Cabin', sans-serif;
-    font-weight: 400;
-    line-height: 1.5;
-    text-decoration: none;
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
-    display: inline-block;
-
-  }
-  .donate-block-action .content a:hover {
-    background: #6ABF4B;
-  }
   */
   /* Progress bar */
   /*
@@ -12497,6 +12479,25 @@ a > .ck-content code {
 .ck-content #block-footerinformation, .ck-content .footer-information {
   font-size: 0.77rem;
   margin: 40px 0;
+}
+.ck-content #block-donateblockaction {
+  text-align: center;
+}
+.ck-content #block-donateblockaction a {
+  color: #FFF;
+  background-color: #FF671D;
+  padding: 20px;
+  font-size: 2em;
+  font-family: "Cabin", sans-serif;
+  font-weight: 400;
+  line-height: 1.5;
+  text-decoration: none;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+  display: inline-block;
+}
+.ck-content #block-donateblockaction a:hover {
+  background: #6ABF4B;
 }
 .ck-content .node__submitted {
   color: #009ADE;
