Fixes #43 improves the look of the donate tabs area
Matches the corners to fit the tabs
Gives the hove an orange background like D7
Not exactly the same as d7, but does the job I think

--- a/css/style.css
+++ b/css/style.css
@@ -12185,9 +12185,18 @@ nav.navbar::before {
 
 .quicktabs-tabpage, .tab-content {
   border: 3px solid #FF671D;
-  border-radius: 10px;
+  border-radius: 0 0 10px 10px;
   padding: 50px 20px;
   color: #fff;
+}
+
+.nav-tabs, .media-library-view--widget .view-header {
+  border: none;
+}
+
+.nav-link:hover, .media-library-view--widget .view-header a:hover {
+  background-color: #FF671D;
+  border-color: #FF671D !important;
 }
 
 .donate-tab-content {
@@ -12208,13 +12217,14 @@ nav.navbar::before {
 }
 
 #views-bootstrap-tab-views-bootstrap-tabs-block-1 li.nav-item {
-  border: 1px solid #FFF;
-  border-bottom-color: rgb(255, 255, 255);
+  border: 3px solid #FF671D;
+  /*border-bottom-color: rgb(255, 255, 255);*/
   border-bottom-style: solid;
   border-bottom-width: 2px;
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
-  border-bottom: 0px;
+  border-left-width: 1px;
+  border-top-left-radius: 12px;
+  border-top-right-radius: 12px;
+  border-bottom: none;
   color: #FFF;
   text-decoration: none;
 }
@@ -12883,6 +12893,10 @@ label.option {
 }
 
 /* Quicktab */
+#views-bootstrap-tab-views-bootstrap-tabs-block-1 button {
+  border-radius: 10px 10px 0 0;
+}
+
 /*
 .monthly-donation h2.block-title {
   color: #FFF;
