--- a/scss/style.scss
+++ b/scss/style.scss
@@ -901,6 +901,10 @@ html {
     border-radius: 10px 10px 0 0;
   }
 
+  .views-field span.btn {
+    padding: 0;
+  }
+
   /*
   .monthly-donation h2.block-title {
     color: #FFF;
